fix(playlistInput): broken UI color on light mode

--- a/src/components/ButtonComponents/SwitchPanelRadioBtn/styles.module.scss
+++ b/src/components/ButtonComponents/SwitchPanelRadioBtn/styles.module.scss
@@ -35,6 +35,17 @@
       }
     }
 
+    .radioSelectorLight {
+      &:hover + label {
+        background-color: rgba(black, 0.2);
+        animation: hoverInput 1s ease-in alternate infinite;
+      }
+
+      &:checked + label {
+        border: 2px solid black;
+      }
+    }
+
     label {
       width: 100%;
       height: 100%;
