--- a/src/components/ButtonComponents/VideoListPanelBtnGroup/styles.module.scss
+++ b/src/components/ButtonComponents/VideoListPanelBtnGroup/styles.module.scss
@@ -1,6 +1,6 @@
-@import '../../../utils/styles/colors';
+@import "../../../utils/styles/colors";
 
-.btnGroup {
+%btnGroup {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,4 +40,30 @@
       fill: white;
     }
   }
+}
+
+.btnGroupLight {
+  @extend %btnGroup;
+
+  button {
+    border: 2px solid black;
+
+    &:hover {
+      background-color: rgba(black, 0.2);
+
+      &::after {
+        background-color: white;
+        color: black;
+        border: 2px solid black;
+      }
+    }
+
+    svg {
+      fill: black;
+    }
+  }
+}
+
+.btnGroupDark {
+  @extend %btnGroup;
 }
