--- a/src/components/Panels/PlayingPanel/styles.module.scss
+++ b/src/components/Panels/PlayingPanel/styles.module.scss
@@ -23,7 +23,7 @@
     }
   }
 
-  .playingPanelBtnGroup {
+  %playingPanelBtnGroup {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -64,5 +64,31 @@
         fill: white;
       }
     }
+  }
+
+  .playingPanelBtnGroupLight {
+    @extend %playingPanelBtnGroup;
+
+    button {
+      border: 2px solid black;
+
+      &:hover {
+        background-color: rgba(black, 0.2);
+
+        &::after {
+          background-color: white;
+          color: black;
+          border: 2px solid black;
+        }
+      }
+
+      svg {
+        fill: black;
+      }
+    }
+  }
+
+  .playingPanelBtnGroupDark {
+    @extend %playingPanelBtnGroup;
   }
 }
